fixed footer gap

--- a/level2-C/lesson-05/main.scss
+++ b/level2-C/lesson-05/main.scss
@@ -190,7 +190,7 @@ body {
 
 @media screen and (max-width: 600px) {
   .html-material-2c {
-    min-height: 125.68vw;
+    min-height: unset;
     .section {
       left: clamp(-158px, calc(-28% - 34px), -100px);
       padding-top: 5px;
