--- a/level2-C/lesson-20/main.scss
+++ b/level2-C/lesson-20/main.scss
@@ -8,9 +8,7 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .html-material-2c {
-  font-family: $text-font;
   width: 100%;
   min-width: 360px;
   max-width: 810px;
@@ -19,9 +17,9 @@ body {
   overflow: hidden;
   position: relative;
   padding-bottom: 62px;
-  background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/03-review-logo.png'), 
-    url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/02-bg.png'),
-    url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/02-bg-footer.png');
+  background-image: url('/images/03-review-logo.png'),
+  url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/02-bg.png'),
+  url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/02-bg-footer.png');
   background-position: 94% 94%, top, bottom;
   background-size: 10%, 100% auto, 100%;
   background-repeat: no-repeat;
@@ -44,7 +42,7 @@ body {
     color: #ffffff;
     text-align: center;
     font-weight: bold;
-    padding-top: 7px;
+    padding-top: 9px;
     font-size: clamp(12px, 2.4vw, 21.5px);
     padding-left: 6px;
     background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/02-section-arrow.png');
@@ -64,14 +62,14 @@ body {
       padding-left: 6px;
       position: relative;
       &:before {
-        content:"\25A0";
+        content: '■';
         position: absolute;
         left: -15px;
         top: -7px;
         font-size: clamp(16px, 2.4vw, 26px);
       }
       &:not(:last-child) {
-        margin-bottom: clamp(15px, 2vw, 20px);
+        margin-bottom: clamp(18px, 2vw, 24px);
       }
     }
   }
@@ -81,18 +79,25 @@ body {
     margin-top: clamp(20px, 17%, 116px);
     margin-left: $left-pixel;
     padding: 6px 16px 6px 0px;
-    font-size: clamp(11px, 2vw, 18px);
+    font-size: clamp(9px, 2vw, 18px);
     background-image: linear-gradient(to right, #fff, #fff, #e6e6e6);
     border-radius: 10px;
     width: calc(100% - #{$left-pixel} - 20px);
 
     .sub-text {
-      font-size: clamp(10px, 2.4vw, 20px);
+      font-size: clamp(9.5px, 2.4vw, 20px);
       font-weight: bold;
     }
     p {
       margin: 2px auto;
     }
+    .description {
+      font-size: clamp(10px, 2vw, 20px);
+    }
+  }
+
+  .part-2 {
+    margin-top: 53px;
   }
 
   .footer {
@@ -103,6 +108,17 @@ body {
     right: 3px;
   }
 }
+
+@media screen and (max-width: 820px) {
+  .html-material-2c {
+    min-height: 125.68vw;
+    padding-bottom: 82px;
+  }
+  .part-2 {
+    margin-top: clamp(28px, 7.2vw, 52px) !important;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .html-material-2c {
     .title {
@@ -113,9 +129,9 @@ body {
 
 @media screen and (max-width: 600px) {
   .html-material-2c {
-    min-height: 210vw;
     .section {
-      left: calc(-28% - 30px);
+      left: clamp(-158px, calc(-28% - 34px), -100px);
+      padding-top: 5px;
     }
   }
 }
@@ -123,18 +139,10 @@ body {
 @media screen and (max-width: 420px) {
   .html-material-2c {
     .title {
-      top: clamp(26px, 7.3vw, 32px);
+      top: clamp(26px, 7.3vw, 32px) !important;
     }
     .section {
-      left: calc(-28% - 50px);
-    }
-  }
-}
-
-@media only screen and (min-width: 411px) and (max-width: 731px) {
-  .html-material-2c {
-    .section {
-      left: calc(-28% - 35px);
+      left: calc(#{$left-pixel} - 240px);
     }
   }
 }
